# Auto-Conformance-Checking

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  architecture.html  backend.Dockerfile  conformance_checking.html  docker-compose.yaml  docker-compose.yml  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  ruff.toml  search.html  searchindex.js  usage.html  usage_example.py
.doctrees/: architecture.doctree  conformance_checking.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
.doctrees/autoapi/: index.doctree
.github/workflows/: code-quality-ci.yaml  docs.yaml
_sources/autoapi/: index.rst.txt
autoapi/: index.html
autoapi/backend/: index.html
backend/: .dockerignore  Dockerfile  backend.md  main.py  requirements.txt  usage_example.py
backend/api/: celonis.py  jobs.py  log.py  logs.py  setup.py
backend/celonis_connection/: celonis_connection_manager.py  usage_example.py
backend/conformance_checking/: declarative_constraints.py  log_skeleton.py  resource_based.py  temporal_profile.py
backend/pql_queries/: declarative_queries.py  declerative_queries.py  general_queries.py  log_skeleton_queries.py  resource_based_queries.py  temporal_profile_queries.py
backend/utils/: file_handlers.py
docs/: Makefile
docs/source/: architecture.rst  conf.py  conformance_checking.rst  index.rst  installation.rst  usage.rst
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/: App.js  ArrowGraph.js  CelonisCredentials.js  Graph.js  Table.js  (+5 more)
(+157 files in other folders)
