[project]
name = "celonis-conformance-insights"
version = "0.1.0"
description = "Celonis Conformance Insights software lab offered by the Chair for Process and Data Science at RWTH Aachen University."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "docformatter>=1.7.5",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]

[tool.pytest.ini_options]
pythonpath = "src"