[project]
name = "celonis-conformance-insights"
version = "0.1.0"
description = "Celonis Conformance Insights software lab offered by the Chair for Process and Data Science at RWTH Aachen University."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pm4py>=2.7.15.2",
    "pycelonis>=2.13.0",
    "python-dotenv",
    "pandas>=2.2.3",
    "rich>=14.0.0",
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "python-multipart>=0.0.20",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
]

[dependency-groups]
dev = [
    "docformatter>=1.7.5",
    "mypy>=1.15.0",
    "pandas-stubs>=2.2.3.250308",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
    "jinja2>=3.1.6",
]

[tool.pytest.ini_options]
pythonpath = "backend"

[[tool.uv.index]]
url = "https://pypi.celonis.cloud/"

[tool.mypy]
exclude = "tests/"
